fix numbered list spacing

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ ol > li:before {
   counter-increment: list;
   content: "(" counter(list) ") ";
   position: absolute;
-  left: -1.4em;
+  left: -1.6em;
 }
 
 footer {
